style fixes for issues present on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -54,10 +54,6 @@
   margin-bottom: 0.5em;
 }
 
-.footer-contact .btn {
-  padding-top: 1em;
-}
-
 .footer-header {
   width: 100%;
   padding: 4em 0;
